--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="details-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
 
     <div class="main-content">
       <p>
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="new-task-label section-title">Add Item</label>
         <div class="new-task-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="text-input task" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
 
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Todo</h3>
+      <ul id="incomplete-tasks" class="tasks-list">
+        <li class="task-row">
+          <input class="task-state" type="checkbox">
+          <label class="task-row-label task">Pay Bills</label>
+          <input type="text" class="text-input task-row-input task">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="btn-icon">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="task-row edit-mode">
+          <input class="task-state" type="checkbox">
+          <label class="task-row-label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="text-input task-row-input task">
+          <button class="btn edit">Save</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="btn-icon">
           </button>
         </li>
       </ul>
 
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Completed</h3>
+      <ul id="completed-tasks" class="tasks-list">
+        <li class="task-row">
+          <input class="task-state" type="checkbox" checked>
+          <label class="task-row-label task">See the Doctor</label>
+          <input type="text" class="text-input task-row-input task">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="btn-icon">
           </button>
         </li>
       </ul>
