--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <div class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="Matrix of Eisenhower">
       <a class="details-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
 
@@ -28,7 +28,7 @@
           <input type="text" class="text-input task-row-input task">
           <button class="btn edit">Edit</button>
           <button class="btn delete">
-            <img src="./remove.svg" class="btn-icon">
+            <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
           </button>
         </li>
         <li class="task-row edit-mode">
@@ -37,7 +37,7 @@
           <input type="text" value="Go Shopping" class="text-input task-row-input task">
           <button class="btn edit">Save</button>
           <button class="btn delete">
-            <img src="./remove.svg" class="btn-icon">
+            <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
           </button>
         </li>
       </ul>
@@ -50,7 +50,7 @@
           <input type="text" class="text-input task-row-input task">
           <button class="btn edit">Edit</button>
           <button class="btn delete">
-            <img src="./remove.svg" class="btn-icon">
+            <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
           </button>
         </li>
       </ul>
