refactor: replace tag selectors in JS for 3.4 rule of html-and-css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="new-task" class="new-task-label section-title">Add Item</label>
         <div class="new-task-wrapper">
           <input id="new-task" class="text-input task" type="text">
-          <button class="btn">Add</button>
+          <button class="btn add">Add</button>
         </div>
       </section>
 
