--- a/index.html
+++ b/index.html
@@ -7,53 +7,56 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="Matrix of Eisenhower">
-      <a class="details-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="Matrix of Eisenhower">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
 
-    <main class="main-content">
-      <section>
-        <label for="new-task" class="new-task-label section-title">Add Item</label>
+    <main class="main">
+      <section class="task-section">
+        <label class="task-section__title" for="new-task">Add Item</label>
         <div class="new-task-wrapper">
-          <input id="new-task" class="text-input task" type="text">
-          <button class="btn add">Add</button>
+          <input class="new-task-wrapper__input text-input" id="new-task" type="text">
+          <button class="new-task-wrapper__btn btn btn_add">Add</button>
         </div>
       </section>
 
-      <section>
-        <h3 class="section-title">Todo</h3>
-        <ul id="incomplete-tasks" class="tasks-list">
-          <li class="task-row">
-            <input class="task-state" type="checkbox">
-            <label class="task-row-label task">Pay Bills</label>
-            <input type="text" class="text-input task-row-input task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
+      <section class="task-section">
+        <h3 class="task-section__title">Todo</h3>
+        <ul class="task-section__list task-section__list_incomplete">
+          <li class="task-item">
+            <input class="task-item__flag" type="checkbox">
+            <label class="task-item__label">Pay Bills</label>
+            <input class="task-item__input text-input" type="text">
+
+            <button class="btn btn_edit">Edit</button>
+            <button class="btn btn_delete">
+              <img src="./remove.svg" class="btn__icon" alt="Remove task icon">
             </button>
           </li>
-          <li class="task-row edit-mode">
-            <input class="task-state" type="checkbox">
-            <label class="task-row-label task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="text-input task-row-input task">
-            <button class="btn edit">Save</button>
-            <button class="btn delete">
-              <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
+          <li class="task-item task-item_edit-mode">
+            <input class="task-item__flag" type="checkbox">
+            <label class="task-item__label">Go Shopping</label>
+            <input class="task-item__input text-input" type="text" value="Go Shopping">
+
+            <button class="btn btn_edit">Save</button>
+            <button class="btn btn_delete">
+              <img src="./remove.svg" class="btn__icon" alt="Remove task icon">
             </button>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h3 class="section-title">Completed</h3>
-        <ul id="completed-tasks" class="tasks-list">
-          <li class="task-row">
-            <input class="task-state" type="checkbox" checked>
-            <label class="task-row-label task">See the Doctor</label>
-            <input type="text" class="text-input task-row-input task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img src="./remove.svg" class="btn-icon" alt="Remove task icon">
+      <section class="task-section">
+        <h3 class="task-section__title">Completed</h3>
+        <ul class="task-section__list task-section__list_completed">
+          <li class="task-item">
+            <input class="task-item__flag" type="checkbox" checked>
+            <label class="task-item__label">See the Doctor</label>
+            <input class="task-item__input text-input" type="text">
+
+            <button class="btn btn_edit">Edit</button>
+            <button class="btn btn_delete">
+              <img src="./remove.svg" class="btn__icon" alt="Remove task icon">
             </button>
           </li>
         </ul>
